[package]
name = "paperboy"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", default-features = false, features = ["macros"] }
service-binding = "0.3"
clap = { version = "3.2", features = ["env", "derive" ] }
serde-xml-rs = "0.5.1"
serde = { version = "1", features = ["derive"] }
url = "2.2.2"
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls"] }
lopdf = { version = "0.27.0", default-features = false, features = ["chrono_time", "nom_parser"] }
mktemp = "0.4.1"
regex = "1.6.0"
lazy_static = "1.4.0"
thiserror = "1.0.32"
env_logger = "0.9.0"

# This is required by cargo vendor during docker builds
[[bin]]
path = "src/main.rs"
name = "main"
