[package]
name = "paperboy"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", default-features = false, features = ["macros"] }
service-binding = "3"
clap = { version = "4", features = ["env", "derive" ] }
serde-xml-rs = "0.6.0"
serde = { version = "1", features = ["derive"] }
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
mktemp = "0.5.1"
regex = "1"
lazy_static = "1"
thiserror = "1"
env_logger = "0.10"

# This is required by cargo vendor during docker builds
[[bin]]
path = "src/main.rs"
name = "main"
